# dspy_experiments

./: .gitignore  pyproject.toml
src/: EntityExtractionPlayground.ipynb  __init__.py  __main__.py  playground.ipynb  rag.py
