[project]
name = "dspy-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "dotenv>=0.9.9",
    "dspy>=2.6.27",
    "jellyfish>=1.2.0",
    "mlflow>=3.1.1",
    "openai>=1.97.0",
    "peft>=0.16.0",
    "torch>=2.7.1",
    "transformers>=4.53.3",
]
